Added changes to included aws sqs impl via spring boot

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 cloud:
   aws:
     region:
-      static: ap-south-1
+      static: ${AWS_REGION}
       auto: false
     credentials:
       access-key: ${AWS_ACCESS_KEY}
